src/components/layout.module.scss
/*imports*/
@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,500,500i,700i,900&display=swap");

$font-size-display-4: 112;
$font-size-display-3: 56;
$font-size-display-2: 45;
$font-size-display-1: 34;
$font-size-headline: 24;
$font-size-title: 20;
$font-size-subhead-2: 15;
$font-size-subhead-1: 15;
$font-size-body-2: 13;
$font-size-body-1: 13;
$font-size-caption: 12;
$font-size-label: 12;
$font-size-menu: 13;
$font-size-button: 14;

$font-size-dv-subhead: 16;
$font-size-dv-body: 14;
$font-size-dv-menu: 14;

$font-weight-display-4: 100;
$font-weight-display-3: 300;
$font-weight-display-2: 300;
$font-weight-display-1: 300;
$font-weight-headline: 300;
$font-weight-title: 400;
$font-weight-subhead-2: 400;
$font-weight-subhead-1: 300;
$font-weight-body-2: 400;
$font-weight-body-1: 300;
$font-weight-caption: 300;
$font-weight-label: 300;
$font-weight-menu: 400;
$font-weight-button: 400;

$line-height-display-4: 128;
$line-height-display-3: 84;
$line-height-display-2: 48;
$line-height-display-1: 40;
$line-height-headline: 32;
$line-height-title: 28;
$line-height-subhead-2: 28;
$line-height-subhead-1: 24;
$line-height-body-2: 24;
$line-height-body-1: 20;
$line-height-caption: 20;
$line-height-label: 20;
$line-height-menu: 20;
$line-height-button: 20;

$letter-spacing-display-4: -0.1;
$letter-spacing-display-3: -0.05;
$letter-spacing-display-2: 0;
$letter-spacing-display-1: 0;
$letter-spacing-headline: 0;
$letter-spacing-title: 0.05;
$letter-spacing-subhead-2: 0.1;
$letter-spacing-subhead-1: 0.1;
$letter-spacing-body-2: 0.1;
$letter-spacing-body-1: 0.1;
$letter-spacing-caption: 0.2;
$letter-spacing-label: 0.1;
$letter-spacing-menu: 0.1;
$letter-spacing-button: 0.1;

@mixin font-size($fontSize: 14) {
  font-size: $fontSize + 0px;
  font-size: ($fontSize / 10)+0rem;
}
@mixin line-height($leadingSize: 14) {
  line-height: $leadingSize + 0px;
  line-height: ($leadingSize / 10)+0rem;
}
@mixin letter-spacing($kerningSize: 0) {
  letter-spacing: $kerningSize + 0px;
  letter-spacing: ($kerningSize / 10)+0rem;
}
@mixin font($fontSize, $leadingSize, $kerningSize) {
  font-size: $fontSize + 0px;
  font-size: ($fontSize / 10)+0rem;
  line-height: $leadingSize + 0px;
  line-height: ($leadingSize / 10)+0rem;
  letter-spacing: $kerningSize + 0px;
  letter-spacing: ($kerningSize / 10)+0rem;
}
/* typography mixins and sizes copied from https://codepen.io/zavoloklom/details/IkaFL */
html {
  font-size: 80%;
  width: 100%;
  height: 100%;
}
body {
  height: 100%;
}
html.textLarge {
  font-size: 75%;
}

html.textSmall {
  font-size: 50%;
}

#___gatsby {
  height: 100%;
}



.wrapper {
  padding: 2%;  
  background-color: #121212;
  min-height: 100vh;

  .main {
  padding-top: 5%;
  display: flex;
  flex-flow: column;
  margin-top: 5%;
  background-color: rgba(255, 255, 255, 0.08);
  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
    0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  padding: 25px;
  margin: 0 auto;
  min-height: 90%;


}
  width: 100%;


.display4 {
  @include font(
    $font-size-display-4,
    $line-height-display-4,
    $letter-spacing-display-4
  );
  font-weight: $font-weight-display-4;
  text-transform: inherit;
}
.display3 {
  @include font(
    $font-size-display-3,
    $line-height-display-3,
    $letter-spacing-display-3
  );
  font-weight: $font-weight-display-3;
  text-transform: inherit;
}
.display2 {
  @include font(
    $font-size-display-2,
    $line-height-display-2,
    $letter-spacing-display-2
  );
  font-weight: $font-weight-display-2;
  text-transform: inherit;
}
.display1 {
  @include font(
    $font-size-display-1,
    $line-height-display-1,
    $letter-spacing-display-1
  );
  font-weight: $font-weight-display-1;
  text-transform: inherit;
}
.headline {
  @include font(
    $font-size-headline,
    $line-height-headline,
    $letter-spacing-headline
  );
  font-weight: $font-weight-headline;
  text-transform: inherit;
}
.title {
  @include font($font-size-title, $line-height-title, $letter-spacing-title);
  font-weight: $font-weight-title;
  text-transform: inherit;
}
.subhead2 {
  @include font(
    $font-size-subhead-2,
    $line-height-subhead-2,
    $letter-spacing-subhead-2
  );
  font-weight: $font-weight-subhead-2;
  text-transform: inherit;
}
.subhead1 {
  @include font(
    $font-size-subhead-1,
    $line-height-subhead-1,
    $letter-spacing-subhead-1
  );
  font-weight: $font-weight-subhead-1;
  text-transform: inherit;
}
.body2 {
  @include font($font-size-body-2, $line-height-body-2, $letter-spacing-body-2);
  font-weight: $font-weight-body-2;
  text-transform: inherit;
}
.body1 {
  @include font($font-size-body-1, $line-height-body-1, $letter-spacing-body-1);
  font-weight: $font-weight-body-1;
  text-transform: inherit;
}
.caption {
  @include font(
    $font-size-caption,
    $line-height-caption,
    $letter-spacing-caption
  );
  font-weight: $font-weight-caption;
  text-transform: inherit;
}
.label {
  @include font($font-size-label, $line-height-label, $letter-spacing-label);
  font-weight: $font-weight-label;
  text-transform: inherit;
}
.menu {
  @include font($font-size-menu, $line-height-menu, $letter-spacing-menu);
  font-weight: $font-weight-menu;
  text-transform: inherit;
}
.button {
  @include font($font-size-button, $line-height-button, $letter-spacing-button);
  font-weight: $font-weight-button;
  text-transform: uppercase;
}



.display4,
.display3,
.display2,
.display1 {
  margin: 0 0 $line-height-title/2 + 0px 0;
  margin-bottom: $line-height-title/20 + 0rem;
}

.headline,
.title,
.subhead2,
.subhead1,
.body2,
.body1,
.caption,
.label,
.menu,
.button {
  margin: 0 0 $line-height-body-1/2 + 0px 0;
  margin-bottom: $line-height-body-1/20 + 0rem;
}

a:visited {
  color: #ee4540;
}

  pre,
  .posts {
    background-color: rgba(255, 255, 255, 0.12);
    margin: 3%;
    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
      0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
    transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
  }
  pre:hover,
  .posts:hover {
    background-color: rgba(255, 255, 255, 0.16);
    box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14),
      0 5px 22px 4px rgba(0, 0, 0, 0.12), 0 7px 8px -4px rgba(0, 0, 0, 0.2);
  }
  .posts {
    padding: 1rem;
    border-radius: 0.7em;
  }
  h1,
  h2,
  h3,
  h4,
  p,
  a {
    font-family: "Roboto", sans-serif;
    color: #ffffff;
  }
  
  code{
    white-space: pre-wrap !important;
    word-wrap: break-word !important;
    word-break: normal !important;
    overflow-wrap: break-word !important;
    overflow: hidden !important;
  }

  #blogPost h3{
    padding-top : 15px;
    border-top: solid #fff 1px;
  }
}


@media only screen and (min-width: 960px) {
  .main {
    width: 60%;
  }
  
}
// Font-size for device
@media only screen and (max-width: 960px) {
  .main {
    max-width: 100%;
    margin: 0;
    border-radius: 0;
  }
  .wrapper {
    padding: 0; 
  }
  .subhead2 {
    @include font-size($font-size-dv-subhead);
  }
  .subhead1 {
    @include font-size($font-size-dv-subhead);
  }
  .body2 {
    @include font-size($font-size-dv-body);
  }
  .body1 {
    @include font-size($font-size-dv-body);
  }
  .menu {
    @include font-size($font-size-dv-menu);
  }
}

